--- a/openAPI-service/composer.json
+++ b/openAPI-service/composer.json
@@ -21,6 +21,13 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.5",
+        "phpro/grumphp": "^1.7",
+        "phpstan/phpstan": "^1.4",
+        "phpstan/phpstan-doctrine": "^1.2",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-symfony": "^1.1",
+        "sebastian/phpcpd": "^6.0",
         "symfony/maker-bundle": "^1.36"
     },
     "config": {
