--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,7 @@ services:
              - "83:8080"
     db:
          container_name: reverse-openapi_db
+         platform: linux/amd64
          image: mysql
          command: ["--default-authentication-plugin=mysql_native_password"]
          volumes:
