--- a/openAPI-service/composer.json
+++ b/openAPI-service/composer.json
@@ -22,6 +22,7 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.5",
         "nelmio/alice": "^3.10",
