--- a/openAPI-service/config/services_test.yaml
+++ b/openAPI-service/config/services_test.yaml
@@ -25,3 +25,4 @@ services:
     # please note that last definitions always *replace* previous ones
 
     App\Service\Generator\FromDatabaseGenerator:
+        public: true
