--- a/openAPI-service/config/services_test.yaml
+++ b/openAPI-service/config/services_test.yaml
@@ -24,5 +24,5 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Service\Generator\FromDatabaseGenerator:
+    App\Service\Generator\Generator:
         public: true
