--- a/openAPI-service/composer.json
+++ b/openAPI-service/composer.json
@@ -26,7 +26,6 @@
         "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.5",
-        "liip/test-fixtures-bundle": "^2.0.0",
         "nelmio/alice": "^3.10",
         "phpro/grumphp": "^1.7",
         "phpstan/phpstan": "^1.4",
@@ -38,8 +37,7 @@
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
         "symfony/maker-bundle": "^1.36",
-        "symfony/phpunit-bridge": "^6.0",
-        "theofidry/alice-data-fixtures": "^1.5"
+        "symfony/phpunit-bridge": "^6.0"
     },
     "config": {
         "allow-plugins": {
