--- a/openAPI-service/.env
+++ b/openAPI-service/.env
@@ -26,3 +26,7 @@ APP_SECRET=7fd8202b1f1fce85abdebdd3327c69ff
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+SQS_TRANSPORT_DSN=https://sqs_queue_url?access_key=your_access_key&secret_key=your_secret_key
+###< symfony/messenger ###
