--- a/openAPI-service/composer.json
+++ b/openAPI-service/composer.json
@@ -11,11 +11,13 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "symfony/amazon-sqs-messenger": "6.0.*",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/messenger": "6.0.*",
         "symfony/property-access": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
