--- a/openAPI-service/composer.json
+++ b/openAPI-service/composer.json
@@ -7,10 +7,13 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "aws/aws-sdk-php": "^3.210",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "gaufrette/aws-s3-adapter": "^0.4.0",
+        "knplabs/gaufrette": "^0.10.0",
         "symfony/amazon-sqs-messenger": "6.0.*",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "6.0.*",
