--- a/openAPI-service/src/DataFixtures/AppFixtures.yaml
+++ b/openAPI-service/src/DataFixtures/AppFixtures.yaml
@@ -52,11 +52,16 @@ App\Entity\HttpResponse:
   pet_get_200:
     httpStatusCode: 200
     description: 'Successful operation'
-    content: '[{
-      "id": 0,
-      "name": "doggie",
-      "status": "available"
-    }]'
+    content:
+      type: 'object'
+      properties:
+        id:
+          example: 0
+        name:
+          example: 'doggie'
+        status:
+          example: 'available'
+
   pet_get_400:
     httpStatusCode: 400
     description: 'Invalid ID supplied'
@@ -77,27 +82,35 @@ App\Entity\Tag:
 
 App\Entity\Parameter:
   pet_get_id:
-    name: 'petId'
-    location: '@query'
+    name: 'id'
+    location: '@path'
     description: 'ID of pet to return'
     required: true
+    parameterSchema:
+      type: 'integer'
   pet_delete_id:
-    name: 'petId'
-    location: '@query'
+    name: 'id'
+    location: '@path'
     description: 'ID of pet to delete'
     required: true
+    parameterSchema:
+      type: 'integer'
 
 App\Entity\ParameterLocation:
-  query:
-    location: 'query'
+  path:
+    location: 'path'
 
 App\Entity\RequestBody:
   pet_post_body:
-    content: '[{
-      "id": 0,
-      "name": "doggie",
-      "status": "available"
-    }]'
+    content:
+      type: 'object'
+      properties:
+        id:
+          example: 0
+        name:
+          example: 'doggie'
+        status:
+          example: 'available'
     required: true
     description: 'Pet object that needs to be added to the store'
 
