--- a/openAPI-service/config/packages/messenger.yaml
+++ b/openAPI-service/config/packages/messenger.yaml
@@ -8,8 +8,14 @@ framework:
                 dsn: "%env(SQS_TRANSPORT_DSN)%"
                 options:
                     auto_setup: false
+                failure_transport: sqs_dead_letter_queue
+                retry_strategy:
+                    max_retries: 0
+
+            sqs_dead_letter_queue:
+                dsn: "%env(SQS_DQL_TRANSPORT_DSN)%"
+                options:
+                    auto_setup: false
 
         routing:
             'App\Messenger\Message\CreateOpenApiDocument': sqs
-
-        # TODO: handle failed messages
