--- a/openAPI-service/.env
+++ b/openAPI-service/.env
@@ -29,6 +29,7 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 
 ###> symfony/messenger ###
 SQS_TRANSPORT_DSN=https://sqs_queue_url?access_key=your_access_key&secret_key=your_secret_key
+SQS_DLQ_TRANSPORT_DSN=https://sqs_queue_url?access_key=your_access_key&secret_key=your_secret_key
 ###< symfony/messenger ###
 
 ###> AWS S3 ###
