:robot: added doctrine schema update and symfony serve

--- a/api-client/Dockerfile
+++ b/api-client/Dockerfile
@@ -8,4 +8,7 @@ RUN apt-get update && \
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-CMD composer install; apache2-foreground
+RUN curl -sS https://get.symfony.com/cli/installer | bash
+RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
+
+CMD composer install; apache2-foreground; php bin/console d:s:u --force; symfony serve;
