--- a/api-client/composer.json
+++ b/api-client/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.11",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
+        "ramsey/uuid": "^4.2",
         "ramsey/uuid-doctrine": "^1.8",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
