--- a/openAPI-service/.env
+++ b/openAPI-service/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=7fd8202b1f1fce85abdebdd3327c69ff
 ###< symfony/framework-bundle ###
 
