:package: added gaufrette

--- a/api-client/.env
+++ b/api-client/.env
@@ -41,3 +41,11 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> AWS S3 ###
+S3_KEY=
+S3_SECRET=
+S3_VERSION=
+S3_REGION=
+S3_BUCKET=
+###< AWS S3 ###
