--- a/api-client/.env
+++ b/api-client/.env
@@ -32,10 +32,8 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+SQS_TRANSPORT_DSN=
+SQS_DLQ_TRANSPORT_DSN=
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
