--- a/api-client/config/packages/messenger.yaml
+++ b/api-client/config/packages/messenger.yaml
@@ -1,24 +1,20 @@
 framework:
-    messenger:
-        failure_transport: failed
+  messenger:
+    serializer:
+      default_serializer: App\Messenger\ExternalJsonMessageSerializer
+    transports:
+      sqs:
+        dsn: '%env(SQS_TRANSPORT_DSN)%'
+        options:
+          auto_setup: false
+        failure_transport: sqs_dead_letter_queue
+        retry_strategy:
+          max_retries: 0
 
-        transports:
-            # https://symfony.com/doc/current/messenger.html#transport-configuration
-            async:
-                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
-                options:
-                    use_notify: true
-                    check_delayed_interval: 60000
-                retry_strategy:
-                    max_retries: 3
-                    multiplier: 2
-            failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+      sqs_dead_letter_queue:
+        dsn: '%env(SQS_DLQ_TRANSPORT_DSN)%'
+        options:
+          auto_setup: false
 
-        routing:
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
-            Symfony\Component\Notifier\Message\ChatMessage: async
-            Symfony\Component\Notifier\Message\SmsMessage: async
-
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+    routing:
+      'App\Messenger\Message\CreateOpenApiDocument': sqs
