:package: added sentry/sentry-symfony

--- a/openAPI-service/.env
+++ b/openAPI-service/.env
@@ -38,3 +38,8 @@ S3_SECRET=
 S3_VERSION=
 S3_REGION=
 ###< AWS S3 ###
+
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
