:robot: fixed name

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,7 @@
 name: Deploy
-on: [api-client/feature/post-document]
+on:
+  push:
+    branches: ['api-client/feature/post-document']
 jobs:
   build:
     name: Build
