--- a/openAPI-service/composer.json
+++ b/openAPI-service/composer.json
@@ -27,6 +27,7 @@
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/serializer": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
@@ -43,7 +44,7 @@
         "sebastian/phpcpd": "^6.0",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
-        "symfony/maker-bundle": "^1.36",
+        "symfony/maker-bundle": "^1.38",
         "symfony/phpunit-bridge": "^6.0"
     },
     "config": {
