get tamplate by tag

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,10 @@ services:
            DB_USER: admin
            DB_PORT: 3306
            DB_NAME: reverse-openapi
+           AWS_ACCESS_KEY_ID: AKIA27SICEV2BHRIBI6S
+           AWS_SECRET_ACCESS_KEY: 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
+           AWS_LOAD_CONFIG: /app/.aws
+           SQS_QUEUE: https://sqs.eu-west-3.amazonaws.com/754991637876/Functional-test-Service
          volumes:
              - "./functionnal-test-service:/app"
          links:
