--- a/functionnal-test-service/Dockerfile
+++ b/functionnal-test-service/Dockerfile
@@ -1,16 +1,21 @@
-FROM golang:alpine
+FROM golang:1.17.0-alpine
 
-# Enable Go modules
-ENV GO111MODULE=on
+RUN apk update && apk upgrade && \
+    apk add --no-cache bash git openssh
 
-# Move to working directory /app
 WORKDIR /app
 
-# Copy the code into the container
+COPY ./go.mod ./go.sum ./
+
+RUN go mod download
+
 COPY . .
 
-# Install 'air' live-reload go module
-RUN go get -u github.com/cosmtrek/air
+RUN go get
 
-# Run the excutable
-ENTRYPOINT ["/go/bin/air"]
+RUN go mod vendor
+
+RUN go build -o main .
+
+
+CMD ["./main"]
