:fire: added message to function test creation service

--- a/api-client/.env
+++ b/api-client/.env
@@ -32,8 +32,11 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
-SQS_TRANSPORT_DSN=
-SQS_DLQ_TRANSPORT_DSN=
+SQS_DOCUMENT_TRANSPORT_DSN=
+SQS_DOCUMENT_DLQ_TRANSPORT_DSN=
+
+SQS_TESTS_TRANSPORT_DSN=
+SQS_TESTS_DLQ_TRANSPORT_DSN=
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
